--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   url_launcher: ^6.3.0
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
