--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.3.0
+  url_launcher: ^6.0.20
+  permission_handler: ^10.2.0
   http: ^1.2.2
 
 
