--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,19 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.11
   permission_handler: ^10.2.0
   http: ^1.2.2
+  local_auth: ^2.3.0
 
   cupertino_icons: ^1.0.6
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  connectivity_plus: ^4.0.0
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/mi_foto.jpg
+    - assets/images/logo_up.jpg
